<?xml version="1.0"?>
<package format="2">
  <name>leo_marvelmind</name>
  <version>0.0.0</version>
  <description>The leo_marvelmind package</description>

  <maintainer email="bitterisland6@gmail.com">Aleksander Szymanski</maintainer>
  
  <license>HWDP</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_localization</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>marvelmind_nav</depend>
  <exec_depend>message_filters</exec_depend>

</package>
